--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,17 +1,33 @@
-# See https://mherman.org/blog/dockerizing-a-react-app/
 # build environment
-FROM node:13.12.0-alpine as build
+FROM arm64v8/node:lts-alpine as build
+
+# install python3 for use by node packages
+RUN apk add python3
+
+# set working directory
 WORKDIR /app
+
+# add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
+
+# install app dependencies
 COPY package.json ./
 COPY yarn.lock ./
-RUN npm ci --silent
-RUN npm install react-scripts@3.4.1 -g --silent
+RUN yarn install --silent
+RUN yarn global add react-scripts --silent
+
+# add app
 COPY . ./
-RUN npm run build
+
+# build the application
+RUN yarn build
 
 # production environment
 FROM nginx:stable-alpine
+
+# place built application in the production environment
 COPY --from=build /app/build /usr/share/nginx/html
+
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
