--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 	},
 	"devDependencies": {
 		"env-create-react-app": "1.1.1",
-		"node-sass": "7.0.0",
+		"sass": "^1.45.0",
 		"styled-components": "5.3.3"
 	}
 }
