--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node
+      - image: arm64v8/node:lts-alpine
     steps:
       - checkout
       - setup_remote_docker
